add second image with the same click counter

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 </head>
 <body>
     <div class="container">
-        <img src="images/2368516302_982f046bb5_o.jpg" alt="Cat">
+        <img src="" alt="Cat" class="cat">
         <span class="clicksContainer"></span>
+        <p class="name"></p>
+    </div>
+    <div class="container">
+        <img src="" alt="Cat" class="cat">
+        <p class="name"></p>
     </div>
     <script src="plugin.js"></script>
 </body>
