Replace the old code with the ES6 code

--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <img src="" alt="Cat" class="cat">
+        <img src="" alt="" title="">
         <span class="clicksContainer"></span>
-        <p class="name"></p>
-    </div>
-    <div class="container">
-        <img src="" alt="Cat" class="cat">
-        <p class="name"></p>
+        <h1 class="name"></h1>
     </div>
     <script src="plugin.js"></script>
 </body>
